--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
   "dependencies":{
   	"express":">=3.0.0",
   	"ua-parser":">=0.3.3"
+  },
+  "repository":{
+  	"type":"git",
+  	"url":"https://github.com/jackmaney/firefox-boycott"
   }
 }
