Added engine to package.json

--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "repository":{
   	"type":"git",
   	"url":"https://github.com/jackmaney/firefox-boycott"
+  },
+  "engine":{
+  	"node":">=0.10.0"
   }
 }
